// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-component when called in an existing project when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Happy coding!

  Further reading:
    https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
  
"
`;

exports[`@coveo/create-atomic-component when called in an existing project when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "On2XOtGKsiCQNf3sl4iW9KMVbUE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ewQGf3/bnIIj+Rv249cv7K7YGsg=",
                      "name": "stencil-docs.d.ts",
                    },
                  ],
                  "hash": "OzYoobNX1XCpcFrvvtsD00f4Rwg=",
                  "name": "docs",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "Iz0d4rkH3mAtGIP/WvaUIGirkUg=",
                  "name": "package.json",
                },
                HashedFile {
                  "hash": "0paD+lp3fCIv4J/d+YrJ6gkGSbo=",
                  "name": "readme.md",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "qJnWpbM0djxX/iTkEr7sFyWoEKE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "/LJZFrH80JVNAGsx3FvxhArXJss=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                  ],
                  "hash": "hn8xJ8lZaPPvjQFOUvWFX55LlDc=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "fbQRJ4X6SRMS8L2dEVdHROC7qA4=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "sJBf8eihavDIWDtCJSYN1tw1L/E=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "bFh3SmB411lXkJIWZnTDWhG9rfI=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "qEEOwUr4MvYxD5CwMtkP/VqUL8Q=",
          "name": "pages",
        },
      ],
      "hash": "9SUwY/UFLm7jg22U3UVbDJCMsyE=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "1yFUJnZrlYtWgNIBp8yzbSN7u08=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-component when called with a valid component name when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Happy coding!

  Further reading:
    https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
  
"
`;

exports[`@coveo/create-atomic-component when called with a valid component name when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "On2XOtGKsiCQNf3sl4iW9KMVbUE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "qDpf4+hr9xUG+okvPDALEJlEqRg=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "mSEayrhdQLFyjWOgicX78wD8seE=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "TLrPzQ215bJQgHPDj+8uidPXAqo=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "SQZmecyPO+BCAzeNl8KNpTq1hX0=",
              "name": "valid-component-name",
            },
          ],
          "hash": "8SzcY63Ejw7oU8yO8oWZQCu5X1E=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "bFh3SmB411lXkJIWZnTDWhG9rfI=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "qEEOwUr4MvYxD5CwMtkP/VqUL8Q=",
          "name": "pages",
        },
      ],
      "hash": "gcBCAP1cZMjfp/6fY0tYf4GeQ24=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "kxvb1m64K3EZF1apkuLEO9q+b+A=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-component when called without any args when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Happy coding!

  Further reading:
    https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
  
"
`;

exports[`@coveo/create-atomic-component when called without any args when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "On2XOtGKsiCQNf3sl4iW9KMVbUE=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "dk1NzEu4Fb2ZY6TKzt21xMFvc2c=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "eoPgFUiPBOkvOe1d3sSahj5u2cU=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "sample-component.css",
                    },
                    HashedFile {
                      "hash": "aeXDp+lsWoSvRwNcTKnynVf/9bk=",
                      "name": "sample-component.tsx",
                    },
                  ],
                  "hash": "1fEyvhZ1KbN3o1NA6j8h5U8u3EM=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "wg7jIEtxm6i1XqtFclzo1JFoLrI=",
              "name": "sample-component",
            },
          ],
          "hash": "zpAFePBsAbU40NF1kGQmmShmPRE=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "bFh3SmB411lXkJIWZnTDWhG9rfI=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "tGVlR0ig5LSS79ZPOfuAFDEvqMw=",
              "name": "index.ts",
            },
          ],
          "hash": "qEEOwUr4MvYxD5CwMtkP/VqUL8Q=",
          "name": "pages",
        },
      ],
      "hash": "MJIX060MJMoUOO9lyBzDXoIEDxw=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "KSLPA0PxkKfrkvVrO4Mq7/w3SKY=",
  "name": "no-args",
}
`;
